--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 .weather-app-wrapper {
+  font-family: Arial, Helvetica, sans-serif;
   max-width: 600px;
   margin: 30px auto;
 }
@@ -20,5 +21,15 @@ li {
   list-style: none;
 }
 img {
-  width: 30px;
+  width: 40px;
+  position: relative;
+  bottom: 15px;
+}
+.units {
+  font-size: 15px;
+  position: relative;
+  bottom: 25px;
+}
+.temp {
+  font-size: 50px;
 }
