--- a/src/style.css
+++ b/src/style.css
@@ -40,3 +40,8 @@ img {
 li:first-letter {
   text-transform: capitalize;
 }
+.weather-temp .active {
+  color: black;
+  text-decoration: none;
+  cursor: default;
+}
