--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@ h1 {
   font-size: 24px;
   line-height: 28px;
   margin-bottom: 0;
-  padding: 5px;
+  padding: 0px;
 }
 ul {
   margin: 0;
@@ -44,4 +44,7 @@ li:first-letter {
   color: black;
   text-decoration: none;
   cursor: default;
+}
+.searchBar {
+  padding-bottom: 5px;
 }
