--- a/src/style.css
+++ b/src/style.css
@@ -3,10 +3,16 @@
   max-width: 600px;
   margin: 30px auto;
 }
+
 .weather-app {
   padding: 20px;
   border: 1px solid #dadde1;
   border-radius: 10px;
+  background: radial-gradient(
+    592px at 48.2% 50%,
+    rgba(255, 255, 249, 0.6) 0%,
+    rgb(160, 199, 254) 74.6%
+  );
 }
 h1 {
   font-size: 24px;
@@ -49,6 +55,7 @@ li:first-letter {
   padding-bottom: 5px;
 }
 .weather-forecast {
+  text-align: center;
   margin-top: 10px;
   text-align: center;
 }
